--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -19,5 +19,4 @@ load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_depende
 rules_foreign_cc_dependencies()
 
 load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
-ocaml_configure(switch = "4.10")
-
+ocaml_configure(switch = "4.10", bootstrap = True)
