build utils:utils, including gen of domainstate.ml[i]
* makefiles use CPP (gcc-E) to generate domainstate.ml[i]; that won't
work with cc_library, so instead of writing a custom CC toolchain to
handle CPP processing we wrote a simple sed script in utils:domainstate_ml

--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -12,7 +12,7 @@ load("//config:BUILD.bzl",
 
      "OC_CPPDEFINES", "OC_NATIVE_CPPDEFINES",
      "OUTPUTEXE", "MKEXE_FLAGS",
-     "BYTE_CCLIB_LDFLAGS"
+     "BYTECCLIBS"
      )
 
 # ifeq "$(TOOLCHAIN)" "msvc"
@@ -163,7 +163,7 @@ cc_binary(
     name = "ocamlrun",
     srcs = ["prims.c", "instrtrace.c"],
     copts = OC_CFLAGS + CFLAGS,
-    linkopts = OC_LDFLAGS + LDFLAGS + BYTE_CCLIB_LDFLAGS + MKEXE_FLAGS,
+    linkopts = OC_LDFLAGS + LDFLAGS + BYTECCLIBS + MKEXE_FLAGS,
     deps= [":camlrun"],
     visibility = ["//visibility:public"]
 )
